--- a/EmployeePayRoll.html
+++ b/EmployeePayRoll.html
@@ -30,6 +30,27 @@
             <input type="text" class="input" id="name"
             name="name" placeholder="Your name.." required>
         </div>
+        <div class="row-content">
+            <label for="profile" class="label text">Profile image</label>
+            <div class="profile-radio-content">
+                <label>
+                    <input type="radio" id="profile1" name="profile" value="" required>
+                    <img  class="profile" id="image1" src="images/profile1.png" alt="">
+                </label>
+                <label>
+                    <input type="radio" id="profile2" name="profile" value="" required>
+                    <img  class="profile" id="image2" src="images/profile2.png" alt="">
+                </label>
+                <label>
+                    <input type="radio" id="profile3" name="profile" value="" required>
+                    <img  class="profile" id="image3" src="images/profile3.png" alt="">
+                </label>
+                <label>
+                    <input type="radio" id="profile4" name="profile" value="" required>
+                    <img  class="profile" id="image4" src="images/profile4.png" alt="">
+                </label>
+            </div>
+        </div>
 
         </form>
     </div>
