add textArea and Button

--- a/EmployeePayRoll.html
+++ b/EmployeePayRoll.html
@@ -119,6 +119,19 @@
                 </select>
             </div>
         </div>
+        <div class="row-content">
+            <label for="notes" class="label text">Notes</label>
+            <textarea name="Notes" id="notes" placeholder="insert text" cols="30" rows="10"></textarea>
+
+        </div>
+        <div class="buttonP">
+            <a href="/home.html" class=" button cancelButton">Cancel</a>
+            <div class="submit-reset">
+                <button type="submit" class="button submit-button" id="submitButton">Submit</button>
+                <button type="reser" class="button reset-button" id="resetButton">Reset</button>
+
+            </div>
+        </div>
 
         </form>
     </div>
